5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1835_2221.log
== TEST (2019-07-01 13:28:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:]):
		
media = soma / na

print(round(media,2))
-- ERROR:
File "XXXX", line 11
    soma = soma + min(N[i,:]):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:28:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:]):
		
media = soma / na

print(round(media,2))
-- ERROR:
File "XXXX", line 11
    soma = soma + min(N[i,:]):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:28:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:]):
		
media = soma / na

print(round(media,2))
-- ERROR:
File "XXXX", line 11
    soma = soma + min(N[i,:]):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:28:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + (min(N[i,:])):
		
media = soma / na

print(round(media,2))
-- ERROR:
File "XXXX", line 11
    soma = soma + (min(N[i,:])):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:29:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + (min(N[i,:]))
		
media = soma / na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:29:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + (min(N[i,:]))
		
media = soma / na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:30:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:])
		
media = soma / na

print(round(media,2))
-- EXECUTION TIME:
1.0022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2221/main.py", line 10, in <module>
    for i in range(Na):
TypeError: 'tuple' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:30:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:])
		
media = soma / na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:30:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(Na):
	soma = soma + min(N[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:32:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(shape(Na)):
	soma = soma + min(N[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:32:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = shape(N[0])

soma = 0 

for i in range(shape(N)[0]):
	soma = soma + min(N[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:32:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

N = array(eval(input("N:")))

Na = mat.shape(N[0])

soma = 0 

for i in range(shape(N)[0]):
	soma = soma + min(N[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:33:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("mat:")))

Na = mat.shape(mat[0])

soma = 0 

for i in range(shape(mat)[0]):
	soma = soma + min(mat[i,:])
		
media = soma / Na

print(round(media,2))
-- EXECUTION TIME:
1.05475
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1835/2221/main.py", line 6, in <module>
    Na = mat.shape(mat[0])
TypeError: 'tuple' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:33:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("mat:")))

Na = mat.shape(mat[0])

soma = 0 

for i in range(shape(mat)[0]):
	soma = soma + min(mat[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:34:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("mat:")))

Na = mat.shape(mat[0])

soma = 0 

for i in range(mat[0]):
	soma = soma + min(mat[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:34:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("mat:")))

Na = mat.shape(mat[0])

soma = 0 

for i in range(mat):
	soma = soma + min(mat[i,:])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:35:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("mat:")))

Na = mat.shape(mat[0])

soma = 0 

	for i in range(mat):
		soma = soma + min(mat[i,:])
		
	media = soma / Na

	print(round(media,2))
-- ERROR:
File "XXXX", line 10
    for i in range(mat):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:37:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))

Na = mat.shape(mat[0])

soma = 0 

for i in range(Na):
	soma = soma + min(mat[i, :])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:39:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))

Na = shape((mat)[0])

soma = 0 

for i in range(Na):
	soma = soma + min(mat[i, :])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:39:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))

Na = shape(mat)[0]

soma = 0 

for i in range(Na):
	soma = soma + min(mat[i, :])
		
media = soma / Na

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:39:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))

Na = shape(mat)[0]

soma = 0 

for i in range(Na):
	soma = soma + min(mat[i, :])
		
media = soma / Na

print(round(media,2))
-- EXECUTION TIME:
0.95281
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
